Small clean-up